# Security-Log-Analyzer

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  Makefile  PUBLIC_EXPORT.json  README.md  SECURITY.md  docker-compose.yml  local-soc-assistant-architecture.md
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_current_schema.py  0002_case_integrity.py  0003_evidence_integrity.py
apps/api/tests/: conftest.py  test_analyze_api.py  test_api_contract.py  test_assistant_api.py  test_auth_gate.py  test_case_bundle_api.py  test_correlation_patterns.py  test_correlation_scoring.py  test_database_isolation.py  test_database_migrations.py  test_detection_quality.py  test_docs_structure.py  test_evaluation_metrics.py  test_health.py  test_iot23_evaluator.py  test_json_log_pipeline.py  test_linux_auth_pipeline.py  test_live_file.py  test_live_interface.py  test_parser_selection.py  test_persistence_integrity.py  test_proof_assets.py  test_public_defaults.py  test_public_demo.py  test_reports_api.py  test_robustness.py  test_rule_library_api.py  test_scenarios.py  test_sequence_engine.py  test_sqlite_backup_tool.py  test_suricata_eve_parser.py  test_syslog_collector.py  test_upload_security.py  test_web_access_pipeline.py  test_windows_event_parser.py  test_zeek_parser.py
apps/api/tracehawk_api/: __init__.py  auth.py  collector.py  config.py  database.py  main.py  observability.py  security.py  version.py
apps/api/tracehawk_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/tracehawk_api/models/: domain.py
apps/api/tracehawk_api/routers/: analyze.py  assistant.py  audit.py  entities.py  live.py  mitre.py  notes.py  operations.py  public_demo.py  reports.py  retention.py  rules.py
apps/api/tracehawk_api/services/: analysis.py  audit.py  (+33 more)
(+148 files in other folders)
