[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tracehawk-api"
version = "0.7.0"
description = "FastAPI backend for TraceHawk local-only live SOC assistant"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "sqlalchemy",
  "pyyaml",
  "watchdog",
  "jinja2",
  "httpx",
  "python-dotenv",
  "python-multipart",
  "reportlab",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
  "pypdf",
  "httpx2>=2,<3",
  "pytest-cov",
  "pip-audit",
  "cyclonedx-bom",
]

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
include = ["tracehawk_api*"]
