[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tracehawk-api"
version = "0.8.0"
description = "FastAPI backend for TraceHawk local-only live SOC assistant"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.18.4,<2",
  "fastapi>=0.139.0,<1",
  "uvicorn[standard]>=0.51.0,<1",
  "pydantic>=2.13.4,<3",
  "sqlalchemy>=2.0.51,<3",
  "pyyaml>=6.0.3,<7",
  "watchdog>=6.0.0,<7",
  "jinja2>=3.1.6,<4",
  "httpx>=0.28.1,<1",
  "python-dotenv>=1.2.2,<2",
  "python-multipart>=0.0.32,<1",
  "reportlab>=5.0.0,<6",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.1.1,<10",
  "ruff>=0.15.20,<1",
  "mypy>=2.2.0,<3",
  "pypdf>=6.14.2,<7",
  "httpx2>=2,<3",
  "pytest-cov>=7.1.0,<8",
  "pip-audit>=2.10.1,<3",
  "cyclonedx-bom>=7.3.0,<8",
  "uv>=0.11.18,<0.12",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
files = [
  "tracehawk_api/config.py",
  "tracehawk_api/database.py",
  "tracehawk_api/models/domain.py",
  "tracehawk_api/services/uploads.py",
]

[tool.setuptools.packages.find]
include = ["tracehawk_api*"]
